// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > inferencing > updateInference > 200 > ok 1`] = `
{
  "inference": {
    "_id": "test",
  },
}
`;

exports[`routes > inferencing > updateInference > audit > expected call 1`] = `
{
  "_id": "test",
  "toObject": [MockFunction spy],
}
`;
